@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-06-30  Erik Grinaker <erikg@codepoet.no>
+
+	* file-selectors and the about dialog are set as transients
+	for the main app window
+
 2004-06-29  Erik Grinaker <erikg@codepoet.no>
 
 	* miscellaneous code cleanups
